Fix card art being cropped instead of resized

--- a/src/Card.css
+++ b/src/Card.css
@@ -1,7 +1,6 @@
 .Card {
   position: relative;
   border: 1px solid black;
-  border-radius: 0.5rem;
   background-color: #fff;
   overflow: hidden;
   box-sizing: border-box;
@@ -11,11 +10,13 @@
 .Card-small {
   width: 146px;
   height: 204px;
+  border-radius: 8px;
 }
 
 .Card-normal {
   width: 360px;
   height: 500px;
+  border-radius: 18px;
 }
 
 .Card-art {
@@ -24,4 +25,5 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-size: cover;
 }
